bug fix: add singularity process.module

--- a/nextflow.config
+++ b/nextflow.config
@@ -113,6 +113,7 @@ notification {
 
 singularity {
     enabled = true
+    process.module = "singularity"
     cacheDir = "${process.simgPath}/cache"
     autoMounts = true
     runOptions = ''
